Make a start on solutions to Q2 - MATH2901.

--- a/LaTeX/MATH2901/tex/MATH2901_2011sol.tex
+++ b/LaTeX/MATH2901/tex/MATH2901_2011sol.tex
@@ -2,6 +2,25 @@
 
 \documentclass[12pt,a4paper,oneside,draft]{article}
 
+\usepackage{geometry, setspace, graphicx, enumerate, cancel}
+\usepackage{amsthm, amsfonts, amsmath, amssymb, mathrsfs}
+\usepackage{listings}
+\usepackage{color}
+\usepackage{sidecap}
+%\usepackage{dcpic,pictex}
+\usepackage{chemfig} % - for chemistry.
+\usepackage{pgf, tikz, tikz-cd, pgfplots}
+%\usepackage{bbm} % /mathbbm{1}
+\usepackage{natbib}
+\usepackage{microtype}
+% \usepackage{hieroglyph}
+\usepackage{multirow}
+%\usepackage[ruled,section]{algorithm}
+%\usepackage{algpseudocode}
+\usepackage{xparse}
+\usepackage{amssymb}
+\usepackage{hyperref}
+
 \author{Edward O'Callaghan}
 \date{}
 \title{Solutions for MATH2901 - 2011 paper.}
@@ -11,5 +30,8 @@
 
 %
 \input{Question1.tex}
+
+%
+\input{Question2.tex}
 
 \end{document}
