Trivial question - MATH2901.

--- a/LaTeX/MATH2901/tex/Question3.tex
+++ b/LaTeX/MATH2901/tex/Question3.tex
@@ -20,6 +20,17 @@ $f(x_1) \geq f(x_2)$ and if $x_1 \leq x_2 < 0$ we then have $f(x_1) \leq f(x_2)$
 \subsubsection{ii.)}
 Show that $F_Y(y) = F_X(\frac{1}{y}) - F_X(-\frac{1}{y})$.
 
+
+Given $f(x)=\frac{1}{|x|} : x \neq 0$. Then
+\[
+ g(y)=
+ \begin{cases}
+  \frac{1}{y} & x > 0, \\
+  -\frac{1}{y} & x < 0.
+ \end{cases}
+\]
+By $X=g(Y)$ the result trivally follows by composition.
+
 %
 \subsection{b.)}
 Consider the two \textbf{r.v.} $X$ and $Y$ with bivariate density given by,
